Fix .gitignore and update website with new links and headers

--- a/website_bucket-site/index.html
+++ b/website_bucket-site/index.html
@@ -92,29 +92,32 @@
     </ul>
   </section>
 
-  <section id="contact">
+  <section id="my links">
     <h2>Contact</h2>
     <p><a href="https://www.linkedin.com/in/zac-campbell-54a443b1/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
-    
-  <form id="contact-form" class="contact-form">
-    <div class="form-group">
+    <p><a href="https://github.com/devcampzac" target="_blank" rel="noopener noreferrer">Github</a></p>
+  </section>
+  
+  <section id="contact">
+    <form id="contact-form" class="contact-form">
+     <div class="form-group">
       <label for="name">Your Name</label>
       <input type="text" id="name" name="name" required>
-    </div>
+     </div>
 
-    <div class="form-group">
+     <div class="form-group">
       <label for="email">Your Email</label>
       <input type="email" id="email" name="email" required>
-    </div>
+     </div>
 
-    <div class="form-group">
+     <div class="form-group">
       <label for="message">Message</label>
       <textarea id="message" name="message" rows="5" required></textarea>
-    </div>
+     </div>
 
-    <button type="submit">Send Message</button>
-    <p id="form-status"></p>
-  </form>
+     <button type="submit">Send Message</button>
+      <p id="form-status"></p>
+    </form>
   </section>
 
 
