forgot h2 code lines

--- a/website_bucket-site/index.html
+++ b/website_bucket-site/index.html
@@ -93,12 +93,13 @@
   </section>
 
   <section id="my links">
-    <h2>Contact</h2>
+    <h2>My Links</h2>
     <p><a href="https://www.linkedin.com/in/zac-campbell-54a443b1/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
     <p><a href="https://github.com/devcampzac" target="_blank" rel="noopener noreferrer">Github</a></p>
   </section>
   
   <section id="contact">
+    <h2>Contact Me</h2>
     <form id="contact-form" class="contact-form">
      <div class="form-group">
       <label for="name">Your Name</label>
