bolden the links

--- a/website_bucket-site/index.html
+++ b/website_bucket-site/index.html
@@ -94,8 +94,8 @@
 
   <section id="my links">
     <h2>My Links</h2>
-    <p><a href="https://www.linkedin.com/in/zac-campbell-54a443b1/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
-    <p><a href="https://github.com/devcampzac" target="_blank" rel="noopener noreferrer">Github</a></p>
+    <p><a href="https://www.linkedin.com/in/zac-campbell-54a443b1/" target="_blank" rel="noopener noreferrer"><h3>LinkedIn</h3></a></p>
+    <p><a href="https://github.com/devcampzac" target="_blank" rel="noopener noreferrer"><h3>Github</h3></a></p>
   </section>
   
   <section id="contact">
