--- a/website_bucket-site/index.html
+++ b/website_bucket-site/index.html
@@ -150,6 +150,7 @@
   </footer>
   <script src="js/counters.js"></script>
   <script src="js/contact.js"></script>
+  <script src="js/config.js"></script>
   <script
   src="https://challenges.cloudflare.com/turnstile/v0/api.js"
   async
